Cleaned up naming and swagger
